# monkey-rust

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .vercelignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Maintainer.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.json  vercel.json
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: doc-publish.yml  packages.yml  prepare-release.yml  release-please.yml  rust.yml
asm/: Cargo.toml  README.md  e2e_test.rs  emitter.rs  emitter_test.rs  lib.rs  lower.rs  lower_test.rs  main.rs  runtime.rs  runtime_backend.rs  runtime_core.rs  runtime_core_test.rs
asm/snapshots/: monkey_asm__lower_test__snapshot_aggregates_and_index.snap  monkey_asm__lower_test__snapshot_boxed_integer_literal.snap  monkey_asm__lower_test__snapshot_builtins_first_class.snap  monkey_asm__lower_test__snapshot_classes.snap  monkey_asm__lower_test__snapshot_closure_capture.snap  monkey_asm__lower_test__snapshot_global_rebinding.snap  monkey_asm__lower_test__snapshot_if_else_and_comparison.snap  monkey_asm__lower_test__snapshot_integer_arithmetic.snap  monkey_asm__lower_test__snapshot_macho_dialect.snap  monkey_asm__lower_test__snapshot_named_function_self_reference.snap  monkey_asm__lower_test__snapshot_observe_mode.snap  monkey_asm__lower_test__snapshot_recursion.snap  monkey_asm__lower_test__snapshot_return_paths.snap
asm/testdata/: abi_fatal_probe.s  abi_fatal_probe_macos.s  abi_probe.s  abi_probe_macos.s
assets/: index.02424f85.js  index.03096352.js  index.055a0ab0.js  index.074fc36d.js  index.0d2fd1c8.js  index.16467dc7.js  index.17ebe818.js  index.190fa498.js  index.1950eedc.js  index.1a14c142.js  index.1c10ed36.js  index.1e87a0bb.js  index.1f051e3a.js  index.21b7986b.js  index.23f24ff3.js  index.2596a083.js  index.25b4fa15.js  index.288aeaf6.js  index.2903c958.js  index.29ca1da5.js  index.2a22a034.js  index.2c0ee436.js  index.325368af.js  index.33956d9b.js  index.3a014924.js  index.463d08f7.js  index.466510f0.js  index.4773369c.js  index.481ca54d.js  index.4b20d485.js  index.4c81ecc6.js  index.4f326186.js  index.50326404.js  index.51f0c3d6.js  index.58248301.js  index.5b53577a.js  index.5bb5103a.js  index.5fffb6d3.js  index.61837219.js  index.641bca21.js  (+108 more)
ast-website/: package.json  webpack.config.js
ast-website/website/: package.json
ast-website/website/src/parsers/: index.js
compiler/: Cargo.toml  README.md  compiler.rs  compiler_function_test.rs  compiler_test.rs  frame.rs  lib.rs  main.rs  op_code.rs  op_code_test.rs  snapshot.rs  snapshot_layout.rs  snapshot_layout_test.rs  snapshot_test.rs  symbol_table.rs  symbol_table_test.rs  vm.rs  vm_function_test.rs  vm_test.rs
compiler/snapshots/: compiler__snapshot_test__tests__golden_mbc_layout.snap
docs/: arm64-asm-backend-design.md  bytecode-snapshot-design.md  compiler-debug-info-design.md  gc-playground-trial-deletion-teaching-plan.md  gc.md  js-style-class-design.md  linter-plan.md  minifier-plan.md  prettier-plugin-development-guide.md  vscode-extension-design.md
evaluator/: Cargo.toml  README.md  builtins.rs  lib.rs  main.rs  object.rs
examples/: hello.monkey
gc/: Cargo.toml  README.md  cli_test.rs  frame.rs  gc-report.md  gc_runtime.rs  gc_stats.rs  gc_test.rs  header.rs  heap.rs  lib.rs  list.rs  main.rs  malloc.rs  repl_test.rs  report.rs  report_test.rs  runner.rs  runner_test.rs  runtime.rs  value.rs  value_test.rs  vm.rs  vm_test.rs
interpreter/: Cargo.toml  README.md  builtins.rs  environment.rs  interpreter_test.rs  lib.rs  main.rs  object.rs
lexer/: Cargo.toml  README.md  lexer_test.rs  lib.rs  main.rs  token.rs
lexer/snapshots/: lexer__lexer_test__tests__array.snap  lexer__lexer_test__tests__bool.snap  lexer__lexer_test__tests__comments.snap  lexer__lexer_test__tests__comments_then_blank_line.snap  lexer__lexer_test__tests__complex.snap  lexer__lexer_test__tests__hash.snap  lexer__lexer_test__tests__let.snap  lexer__lexer_test__tests__let_with_space.snap  lexer__lexer_test__tests__simple.snap  lexer__lexer_test__tests__string.snap  lexer__tests__array.snap  lexer__tests__bool.snap  lexer__tests__complex.snap  lexer__tests__hash.snap  lexer__tests__let.snap  lexer__tests__let_with_space.snap  lexer__tests__lexer_array.snap  lexer__tests__lexer_bool.snap  lexer__tests__lexer_complex.snap  lexer__tests__lexer_hash.snap  lexer__tests__lexer_let.snap  lexer__tests__lexer_let_with_space.snap  lexer__tests__lexer_simple.snap  lexer__tests__lexer_string.snap  lexer__tests__simple.snap  lexer__tests__string.snap  monkey__lexer__tests__lexer_complex.snap  monkey__lexer__tests__lexer_simple.snap
lib/: monkey.rs
lib/lexer/: mod.rs  token.rs
object/: Cargo.toml  README.md  builtins.rs  environment.rs  object.rs
parser/: Cargo.toml  README.md  ast.rs  ast_tree_test.rs  lib.rs  main.rs  parser_test.rs  precedences.rs  validation.rs
parser/snapshots/: parser__ast_tree_test__tests__test_array.snap  parser__ast_tree_test__tests__test_binary.snap  parser__ast_tree_test__tests__test_binary_nested.snap  parser__ast_tree_test__tests__test_func_call.snap  parser__ast_tree_test__tests__test_func_declaration.snap  parser__ast_tree_test__tests__test_func_with_name.snap  parser__ast_tree_test__tests__test_hash.snap  parser__ast_tree_test__tests__test_if.snap  parser__ast_tree_test__tests__test_index.snap  parser__ast_tree_test__tests__test_let.snap  parser__ast_tree_test__tests__test_return.snap  parser__ast_tree_test__tests__test_string.snap  parser__ast_tree_test__tests__test_unary.snap
scripts/: bump_cargo_packages.ts  vercel-install.sh
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
wasm/tests/: web.rs
