[package]
name = "monkey-compiler"
version = "0.8.0"
description = "an interpreter for monkeylang"
homepage = "https://github.com/gengjiawen/monkey-rust"
repository = "https://github.com/gengjiawen/monkey-rust"
authors = ["gengjiawen <technicalcute@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
name = "compiler"
path= "lib.rs"

[[bin]]
name = "monkey-compiler"
path = "main.rs"

[dependencies]
lazy_static = "1.4.0"
byteorder = "1.4.3"
monkey-parser = { path = "../parser", version = "0.8.0" }
monkey-object = { path = "../object", version = "0.8.0" }
