[package]
name = "monkey-evaluator"
version = "0.1.0"
authors = ["daniel"]
homepage = "https://github.com/gengjiawen/monkey_rust"
repository = "https://github.com/gengjiawen/monkey_rust"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "evaluator"
path= "lib.rs"

[[bin]]
name = "evaluator"
path = "main.rs"

[dependencies]
monkey-parser = { path = "../parser", version = "0.1.0" }
