[package]
name = "monkey-gc"
version = "1.1.0"
description = "QuickJS-style GC runtime for Monkey (bytecode VM with cycle collector)"
homepage = "https://github.com/gengjiawen/monkey-rust"
repository = "https://github.com/gengjiawen/monkey-rust"
authors = ["gengjiawen <technicalcute@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
name = "gc"
path = "lib.rs"

[[bin]]
name = "monkey-gc"
path = "main.rs"

[dependencies]
byteorder = "1.5.0"
monkey-compiler = { path = "../compiler", version = "1.0.0" }
monkey-object = { path = "../object", version = "1.0.0" }
monkey-parser = { path = "../parser", version = "1.0.0" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
insta = "1.42.2"

[lints]
workspace = true
