[package]
name = "monkey-interpreter"
version = "0.5.0"
description = "a evaluator for monkey lang"
homepage = "https://github.com/gengjiawen/monkey-rust"
repository = "https://github.com/gengjiawen/monkey-rust"
authors = ["gengjiawen <technicalcute@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "interpreter"
path= "lib.rs"

[[bin]]
name = "monkey-interpreter"
path = "main.rs"

[dependencies]
phf = { version = "0.9", features = ["macros"] }
monkey-parser = { path = "../parser", version = "=0.5.0" }
