[package]
name = "monkey-interpreter"
version = "0.9.1"
description = "an interpreter for monkeylang"
homepage = "https://github.com/gengjiawen/monkey-rust"
repository = "https://github.com/gengjiawen/monkey-rust"
authors = ["gengjiawen <technicalcute@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "interpreter"
path= "lib.rs"

[[bin]]
name = "monkey-interpreter"
path = "main.rs"

[dependencies]
monkey-parser = { path = "../parser", version = "0.9.1" }
monkey-object = { path = "../object", version = "0.9.1" }
