[package]
name = "monkey-lexer"
version = "0.1.0"
authors = ["gengjiawen <technicalcute@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lexer"
path= "lib.rs"

[[bin]]
name = "lexer"
path = "main.rs"

[dependencies]

[dev-dependencies]
insta = "1.3.0"
cargo-insta = "1.3.0"
