[package]
name = "monkey-lexer"
version = "0.8.0"
description = "a lexer for monkey lang"
homepage = "https://github.com/gengjiawen/monkey-rust"
repository = "https://github.com/gengjiawen/monkey-rust"
authors = ["gengjiawen <technicalcute@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lexer"
path= "lib.rs"

[[bin]]
name = "monkey-lexer"
path = "main.rs"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dev-dependencies]
insta = "1.17.1"
