[package]
name = "monkey-object"
version = "0.8.0"
description = "a object system for monkey lang"
homepage = "https://github.com/gengjiawen/monkey-rust"
repository = "https://github.com/gengjiawen/monkey-rust"
authors = ["gengjiawen <technicalcute@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "object"
path= "object.rs"

[dependencies]
phf = { version = "0.10", features = ["macros"] }
monkey-parser = { path = "../parser", version = "0.8.0" }

[dev-dependencies]
insta = "1.15.0"
