[package]
name = "monkey-object"
version = "0.10.2"
description = "a object system for monkey lang"
homepage = "https://github.com/gengjiawen/monkey-rust"
repository = "https://github.com/gengjiawen/monkey-rust"
authors = ["gengjiawen <technicalcute@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "object"
path= "object.rs"

[dependencies]
lazy_static = "1.5.0"
monkey-parser = { path = "../parser", version = "0.10.0" }

[dev-dependencies]
insta = "1.42.2"
