[package]
name = "monkey-parser"
version = "0.9.1"
description = "a parser for monkey lang"
homepage = "https://github.com/gengjiawen/monkey-rust"
repository = "https://github.com/gengjiawen/monkey-rust"
authors = ["gengjiawen <technicalcute@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "parser"
path= "lib.rs"

[[bin]]
name = "monkey-parser"
path = "main.rs"

[dependencies]
monkey-lexer = { path = "../lexer", version = "0.9.1" }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dev-dependencies]
insta = "1.42.1"

